# make-llmstxt

./: .env.example  .gitignore  Makefile  PLAN_LANGFUSE.md  PLAN_STORE_INTEGRATION.md  README.md  docker-compose.yml  langgraph.json  llama-models.ini  main.py  pyproject.toml
.make-llmstxt/test_router/: index.json
.make-llmstxt/test_router/content/: batch.json  rate-limits.json  test1.json  webhooks.json
docker/: preset.ini
make_llmstxt/: __init__.py  cli.py  config.py  critic.py  deep_draft.py  firecrawl.py  generator.py  llm.py  logging.py  mcp_scraper.py  mcp_tools.py  prompts.py
make_llmstxt/core/: __init__.py  base.py
make_llmstxt/generators/: __init__.py  skill.py
make_llmstxt/templates/: skill.py
scripts/: generate-secrets.sh
src/: __init__.py  cli.py  config.py
src/core/: __init__.py  prompts.py
src/generators/: critic.py  deep_draft.py  llmstxt.py  llmstxt_agent.py  skill.py
src/make_llmstxt/: cli.py  cli_main.py  config.py  validators.py
src/make_llmstxt/cli/: __init__.py  embed.py
src/make_llmstxt/core/: __init__.py  models.py  prompts.py
src/make_llmstxt/generators/: __init__.py  base_agent.py  critic.py  llmstxt.py  llmstxt_agent.py  schemas.py  skill.py
src/make_llmstxt/scrapers/: mcp_tools.py
src/make_llmstxt/store/: __init__.py
src/make_llmstxt/tools/: __init__.py  store_tools.py
src/make_llmstxt/utils/: __init__.py  (+3 more)
src/scrapers/: __init__.py  mcp_tools.py
src/utils/: llm.py  logging.py
tests/: debug_mcp.py  test_deep_draft.py  test_domains.py  test_mcp_caching.py  test_scrape.py  test_scraper.py  test_zai.py
(+4 files in other folders)
